make lat/lon optional on user distance endpoint
